English language error changed

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -1,13 +1,13 @@
-"Field is required" = "Fältet är obligatoriskt";
-"Min length is 6 characters!" = "Min längd är 6 tecken!";
-"Signup sucessful!" = "Registrera dig framgångsrik!";
-"Invalid email" = "Ogiltig email";
-"No errors" = "Inga fel";
-"Success! A reset email was sent to you" = "Framgång! En återställnings email skickades till dig";
-"Ok" = "Okej";
-"Cancel" = "Annullera";
-"Email Address" = "E-postadress";
-"Enter the email for your account:" = "Ange e-post för ditt konto:";
-"invalid login parameters" = "Ogiltiga Inloggningsuppgifter";
-"the email address entered has already been taken" = "e adressen har redan tagits";
-"the username entered has already been taken" = "användarnamnet angav har redan tagits";
+"Field is required" = "Field is required";
+"Min length is 6 characters!" = "Min length is 6 characters!";
+"Signup sucessful!" = "Signup sucessful!";
+"Invalid email" = "Invalid email";
+"No errors" = "No errors";
+"Success! A reset email was sent to you" = "Success! A reset email was sent to you";
+"Ok" = "Ok";
+"Cancel" = "Cancel";
+"Email Address" = "Email Address";
+"Enter the email for your account:" = "Enter the email for your account:";
+"invalid login parameters" = "invalid login parameters";
+"the email address entered has already been taken" = "the email address entered has already been taken";
+"the username entered has already been taken" = "the username entered has already been taken";
